--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     grid-template-columns: repeat(9, 40px);
     grid-template-rows: repeat(9, 40px);
     gap: 5px;
-    margin: 20px auto;
+    /*margin: 20px auto;*/
 }
 
 #grid div {
@@ -43,7 +43,7 @@ body {
 }
 
 button {
-    margin: 10px;
+    margin: 2px;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
@@ -69,8 +69,8 @@ button:hover {
 #shop {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    margin-top: 20px;
+
+    /*margin-top: 20px;*/
 }
 
 #buy-attempts, #buy-win {
@@ -89,5 +89,5 @@ button:hover {
 
 #game-over-message {
     font-size: 18px;
-    margin: 20px 0;
+    /*margin: 20px 0;*/
 }
